# nn-hal

./: BUILD.gn  BasePreparedModel.cpp  BasePreparedModel.h  Driver.cpp  Driver.h  IENetwork.cpp  ModelManager.cpp  gna_driver.cpp  utils.h
cpu/: CpuPreparedModel.cpp
gna/: GnaPreparedModel.cpp
